[package]
authors = ["Zhixing Zhang <me@neoto.xin>"]
edition = "2018"
readme = "README.md"
name = "mini-proj"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
embedded-graphics = "0.6.0-alpha.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

[dependencies.ssd1306]
version = "0.2.6"
features = ["graphics"]


[dependencies.rand]
version = "0.7"
default-features = false
features = ["small_rng"]

[dependencies.stm32f0]
features = ["stm32f0x1", "rt"] # Supports STM32F031, STM32F051, STM32F071, STM32F091
version = "0.8.0"

[dependencies.stm32f0xx-hal]
version = "0.15.2"
features = ["stm32f051"]

# this lets you use `cargo fix`!
[[bin]]
name = "mini-proj"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
